함수 수정 완료

--- a/student.html
+++ b/student.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
@@ -76,7 +76,7 @@
             return ["", "", ""];
         });
         students.push(function get201644005() {
-            return ["", "", ""];
+            return ["201644005", "김예진", "50"];
         });
         students.push(function get201644009() {
             return ["", "", ""];
